--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -22,7 +22,7 @@
 
 	&:before {
 		padding-bottom: 73.3125%;
-		background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/image-mask-top.png');
+		background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/image-mask-top.png') !important;
 		background-position: top center;
 		top: 0;
 	}
@@ -42,8 +42,14 @@
 }
 
 
+.site-main {
+	margin-top: -20%;
+}
+
+
 .home-hero:before {
-	display: none !important;
+	background-color: transparent !important;
+	opacity: 1 !important;
 }
 
 
