--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'objects/container';
 
 // Components
+@import 'blocks/button';
 @import 'blocks/header';
 @import 'blocks/hero';
 @import 'blocks/main-nav';
