--- a/css/main.css
+++ b/css/main.css
@@ -404,8 +404,12 @@ h4,
   text-transform: uppercase; }
 
 html {
+  font-weight: false;
   background-color: #f6f9fa;
   color: #1f1f1f; }
+
+p {
+  margin-bottom: 1.5rem; }
 
 /**
  * 	 __        ______ ____  _   _ _____ 
@@ -423,6 +427,13 @@ html {
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto; }
+
+.wp-block-button__link,
+.btn {
+  background-color: #8953ac;
+  color: #f8f8f8;
+  font-weight: 600;
+  padding: 1.125rem 1.5rem; }
 
 /**
  * 	 __        ______ ____  _   _ _____ 
@@ -514,6 +525,10 @@ html {
   .home-hero h1 {
     font-size: 10rem;
     line-height: .875; } }
+
+.entry-title + *,
+.home-hero h1 + * {
+  margin-top: 1.5rem; }
 
 .home .entry-header {
   display: none; }
