--- a/css/main.css
+++ b/css/main.css
@@ -404,9 +404,10 @@ h4,
   text-transform: uppercase; }
 
 html {
-  font-weight: false;
+  font-weight: 300;
   background-color: #f6f9fa;
-  color: #1f1f1f; }
+  color: #1f1f1f;
+  line-height: 1.5; }
 
 body {
   background-color: transparent; }
@@ -460,7 +461,7 @@ p {
  */
 .site-header {
   position: relative;
-  z-index: 5;
+  z-index: 10;
   margin-bottom: -6rem; }
 
 .site-title,
@@ -471,7 +472,7 @@ p {
   display: block;
   max-width: 7.5rem;
   position: relative;
-  z-index: 5;
+  z-index: 10;
   padding: 2.25rem 0 1.5rem 0; }
 
 .site-branding {
