--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -9,9 +9,11 @@
  */
 
 .site-header {
-	position: relative;
+	position: fixed;
 	z-index: 10;
-	margin-bottom: -6rem;
+	width: 100%;
+	top: 0;
+	left: 0;
 }
 
 .custom-header {
