--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -16,6 +16,10 @@
 	padding-top: 40%;
 	padding-bottom: 30%;
 
+	@media screen and (min-width: #{ config( grid, breakpoints, xl ) } ) {
+		background-attachment: fixed;
+	}
+
 	&:before,
 	&:after {
 		content: "";
@@ -49,9 +53,10 @@
 }
 
 
-.home-hero + * {
+.hone-hero {
+	margin-top: -25%;
 	position: relative;
-	z-index: 5;
+	z-index: 0;
 }
 
 
