--- a/scss/blocks/_main-nav.scss
+++ b/scss/blocks/_main-nav.scss
@@ -18,7 +18,8 @@
 	@media screen and (min-width: #{ config( grid, breakpoints, lg ) } ) {
 		position: absolute;
 		top: 0;
-		right: 0;
+		left: 50%;
+		transform: translateX( -50% );
 		text-align: right;
 	}
 
