--- a/css/main.css
+++ b/css/main.css
@@ -483,7 +483,9 @@ p {
   padding: 2.25rem 0 1.5rem 0; }
 
 .site-branding {
-  position: relative; }
+  position: relative;
+  max-width: 7.5rem;
+  z-index: 10; }
   .site-branding:before {
     content: "";
     display: inline-block;
@@ -591,13 +593,17 @@ p {
   font-weight: 600; }
   .main-navigation a {
     color: inherit !important;
-    padding: 1.5rem; }
+    padding: 0.75rem 1.25rem; }
+    @media screen and (min-width: 992px) {
+      .main-navigation a {
+        padding: 1.5rem; } }
+  @media screen and (min-width: 992px) {
+    .main-navigation .menu > li > a {
+      padding: 1.5rem 3rem; } }
   .main-navigation li:hover > a {
     color: #8953ac !important; }
   .main-navigation li {
     text-align: left; }
-  .main-navigation .menu > li > a {
-    padding: 1.5rem 3rem; }
 
 @media screen and (min-width: 992px) {
   .main-navigation {
@@ -607,10 +613,28 @@ p {
     transform: translateX(-50%);
     text-align: right; } }
 
+@media screen and (max-width: 991px) {
+  .main-navigation .menu-primary-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(246, 249, 250, 0.9);
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 5.3125rem; } }
+
 @media screen and (min-width: 992px) {
   .main-navigation .menu li {
     display: inline-block;
     position: relative; }
+  .main-navigation .menu .sub-menu {
+    top: 100%;
+    left: 0; }
+    .main-navigation .menu .sub-menu .sub-menu {
+      top: 0;
+      left: 100%; }
   .main-navigation .menu > li {
     margin-right: -4px; }
     .main-navigation .menu > li > a {
@@ -627,25 +651,30 @@ p {
     opacity: 1;
     overflow: auto; } }
 
-.menu-toggle {
+.menu-toggle,
+.dropdown-toggle {
   border: none;
   outline: none;
-  text-indent: -999px;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
+  background-color: rgba(246, 249, 250, 0.75) !important;
   height: 5.3125rem;
   width: 5.3125rem;
-  background-color: rgba(246, 249, 250, 0.75) !important;
-  text-align: center; }
+  position: absolute;
+  top: 0;
+  right: 0; }
+
+.menu-toggle {
+  text-indent: -999px;
+  overflow: hidden;
+  text-align: center;
+  z-index: 10; }
   .menu-toggle:after {
     content: "";
     background-image: url("https://2020.brisbane.wordcamp.org/files/2019/12/hamburger-icon.png");
-    width: 3.125rem;
-    height: 3.125rem;
-    right: 1.09375rem;
-    top: 1.09375rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    right: 1.40625rem;
+    top: 1.40625rem;
+    margin-top: 0.75rem;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
