--- a/scss/blocks/_main-nav.scss
+++ b/scss/blocks/_main-nav.scss
@@ -3,7 +3,17 @@
 
 	a {
 		color: inherit !important;
-		padding: calc-rem( config( spacing, base ) );
+		padding: calc-rem( config( spacing, base ) / 2 ) calc-rem( config( grid, page-gutter ) );
+
+		@media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
+			padding: calc-rem( config( spacing, base ) );
+		}
+	}
+
+	.menu > li > a {
+		@media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
+			padding: calc-rem( config( spacing, base ) ) calc-rem( config( spacing, base ) * 2 );
+		}
 	}
 
 	li:hover > a {
@@ -14,9 +24,6 @@
 		text-align: left;
 	}
 
-	.menu > li > a {
-		padding: calc-rem( config( spacing, base ) ) calc-rem( config( spacing, base ) * 2 );
-	}
 }
 
 
@@ -31,12 +38,36 @@
 		text-align: right;
 	}
 
+	.menu-primary-container {
+		@media screen and ( max-width: #{ config( grid, breakpoints, lg ) - 1 } ) {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100vh;
+			background-color: rgba( config( colors, page, base ), .9 );
+			padding-left: 0;
+			padding-right: 0;
+			padding-top: calc-rem( 85px );
+		}
+	}
+
 	.menu {
 
 		@media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
 			li {
 				display: inline-block;
 				position: relative;
+			}
+
+			.sub-menu {
+				top: 100%;
+				left: 0;
+
+				.sub-menu {
+					top: 0;
+					left: 100%;
+				}
 			}
 
 			> li {
@@ -66,26 +97,33 @@
 } 
 
 
-.menu-toggle {
+.menu-toggle,
+.dropdown-toggle {
 	border: none;
 	outline: none;
-	text-indent: -999px;
-	overflow: hidden;
+	background-color: rgba( config( colors, page, base ), .75 ) !important;
+	height: calc-rem( 85px );
+	width: calc-rem( 85px );
 	position: absolute;
 	top: 0;
 	right: 0;
-	height: calc-rem( 85px );
-	width: calc-rem( 85px );
-	background-color: rgba( config( colors, page, base ), .75 ) !important;
+}
+
+
+.menu-toggle {
+	text-indent: -999px;
+	overflow: hidden;
 	text-align: center;
+	z-index: 10;
 
 	&:after {
 		content: "";
 		background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/hamburger-icon.png');
-		width: calc-rem( 50px );
-		height: calc-rem( 50px );
-		right: calc-rem( ( 85px - 50px ) / 2 );
-		top: calc-rem( ( 85px - 50px ) / 2 );
+		width: calc-rem( 40px );
+		height: calc-rem( 40px );
+		right: calc-rem( ( 85px - 40px ) / 2 );
+		top: calc-rem( ( 85px - 40px ) / 2 );
+		margin-top: calc-rem( config( spacing, base ) * .5 );
 		background-size: contain;
 		background-position: center;
 		background-repeat: no-repeat;
