--- a/css/main.css
+++ b/css/main.css
@@ -509,8 +509,12 @@ p {
 .entry-header,
 .home-hero {
   position: relative;
-  padding-top: 40%;
+  padding-top: 60%;
   padding-bottom: 30%; }
+  @media screen and (min-width: 768px) {
+    .entry-header,
+    .home-hero {
+      padding-top: 40%; } }
   @media screen and (min-width: 1280px) {
     .entry-header,
     .home-hero {
@@ -625,13 +629,30 @@ p {
     padding-right: 0;
     padding-top: 5.3125rem; } }
 
+.main-navigation .menu .sub-menu {
+  position: static;
+  float: none;
+  max-height: 0;
+  transition: max-height .2s ease;
+  overflow: hidden; }
+  @media screen and (max-width: 991px) {
+    .main-navigation .menu .sub-menu {
+      box-shadow: none; }
+      .main-navigation .menu .sub-menu a {
+        padding-left: 2.25rem; } }
+
+.main-navigation .menu .dropdown-toggle[aria-expanded="true"] + .sub-menu {
+  max-height: 100rem; }
+
 @media screen and (min-width: 992px) {
   .main-navigation .menu li {
     display: inline-block;
     position: relative; }
   .main-navigation .menu .sub-menu {
     top: 100%;
-    left: 0; }
+    left: 0;
+    position: absolute;
+    max-height: none; }
     .main-navigation .menu .sub-menu .sub-menu {
       top: 0;
       left: 100%; }
@@ -662,6 +683,20 @@ p {
   top: 0;
   right: 0; }
 
+.dropdown-toggle {
+  width: 3rem;
+  height: 3rem; }
+  .dropdown-toggle:before {
+    content: "";
+    display: inline-block;
+    width: .75rem;
+    height: .75rem;
+    position: relative;
+    top: -.3em;
+    border-bottom: 2px solid currentcolor;
+    border-right: 2px solid currentcolor;
+    transform: rotate(45deg); }
+
 .menu-toggle {
   text-indent: -999px;
   overflow: hidden;
@@ -674,7 +709,7 @@ p {
     height: 2.5rem;
     right: 1.40625rem;
     top: 1.40625rem;
-    margin-top: 0.75rem;
+    margin-top: 0.375rem;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
