Move hero overlay down

--- a/css/main.css
+++ b/css/main.css
@@ -504,7 +504,7 @@ p {
 
 .entry-header:before,
 .home .home-hero:first-of-type:before {
-  top: 15%; }
+  top: 15% !important; }
 
 .entry-header,
 .home-hero {
@@ -549,7 +549,8 @@ p {
 .hone-hero {
   margin-top: -25%;
   position: relative;
-  z-index: 0; }
+  z-index: 0;
+  margin-bottom: -15%; }
 
 .site-main {
   margin-top: -20%; }
@@ -571,7 +572,11 @@ p {
 .entry-title,
 .home-hero h1 {
   line-height: .925;
-  font-size: 2.625rem; }
+  font-size: 3.125rem; }
+  @media screen and (min-width: 375px) {
+    .entry-title,
+    .home-hero h1 {
+      font-size: 3.75rem; } }
   @media screen and (min-width: 768px) {
     .entry-title,
     .home-hero h1 {
@@ -600,7 +605,7 @@ p {
     padding: 0.75rem 1.25rem; }
     @media screen and (min-width: 992px) {
       .main-navigation a {
-        padding: 1.5rem; } }
+        padding: 1.5rem 3rem; } }
   @media screen and (min-width: 992px) {
     .main-navigation .menu > li > a {
       padding: 1.5rem 3rem; } }
@@ -629,20 +634,31 @@ p {
     padding-right: 0;
     padding-top: 5.3125rem; } }
 
+@media screen and (min-width: 992px) {
+  .main-navigation .menu li:hover > .sub-menu {
+    visibility: visible;
+    opacity: 1; } }
+
 .main-navigation .menu .sub-menu {
   position: static;
   float: none;
   max-height: 0;
   transition: max-height .2s ease;
   overflow: hidden; }
+  @media screen and (min-width: 992px) {
+    .main-navigation .menu .sub-menu {
+      visibility: hidden;
+      opacity: 0;
+      transition: opacity .2s ease; } }
   @media screen and (max-width: 991px) {
     .main-navigation .menu .sub-menu {
       box-shadow: none; }
       .main-navigation .menu .sub-menu a {
         padding-left: 2.25rem; } }
 
-.main-navigation .menu .dropdown-toggle[aria-expanded="true"] + .sub-menu {
-  max-height: 100rem; }
+@media screen and (max-width: 991px) {
+  .main-navigation .menu .dropdown-toggle[aria-expanded="true"] + .sub-menu {
+    max-height: 100rem; } }
 
 @media screen and (min-width: 992px) {
   .main-navigation .menu li {
