--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -5,7 +5,7 @@
 .entry-header,
 .home .home-hero:first-of-type {
 	&:before {
-		top: 15%;
+		top: 15% !important;
 	}
 }
 
@@ -62,6 +62,7 @@
 	margin-top: -25%;
 	position: relative;
 	z-index: 0;
+	margin-bottom: -15%;
 }
 
 
@@ -95,7 +96,11 @@
 .entry-title,
 .home-hero h1 {
 	line-height: .925;
-	font-size: calc-rem( 42px );
+	font-size: calc-rem( 50px );
+
+	@media screen and (min-width: 375px ) {
+		font-size: calc-rem( 60px );
+	}
 
 	@media screen and (min-width: #{ config( grid, breakpoints, md ) } ) {
 		font-size: calc-rem( 90px );
