--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'blocks/header';
 @import 'blocks/hero';
 @import 'blocks/main-nav';
+@import 'blocks/aside';
 
 // Utilities
 @import 'utilities/images';
