--- a/scss/blocks/_aside.scss
+++ b/scss/blocks/_aside.scss
@@ -8,6 +8,10 @@
 	}
 }
 
+.widget-title {
+	@extend %text-style--h4;
+}
+
 .widget-area[role="complementary"] {
 	padding-top: calc-rem( config( spacing, base ) * 2 );
 	padding-bottom: calc-rem( config( spacing, base ) * 2 );
@@ -16,6 +20,7 @@
 		display: inline-block;
 		padding-right: calc-rem( config( spacing, base ) );
 		vertical-align: top;
+		margin-right: -4px;
 
 		@media screen and ( min-width: #{ config( grid, breakpoints, md ) } ) {
 			width: 50%;
