--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'blocks/hero';
 @import 'blocks/main-nav';
 @import 'blocks/aside';
+@import 'blocks/subscribe';
 
 // Utilities
 @import 'utilities/images';
