--- a/css/main.css
+++ b/css/main.css
@@ -451,13 +451,19 @@ p {
   margin-left: auto;
   margin-right: auto; }
 
-
+#subscribe-submit button,
 .wp-block-button__link,
 .btn {
+  border-radius: 2rem;
+  border: 2px solid #8953ac;
   background-color: #8953ac;
   color: #f8f8f8;
   font-weight: 600;
   padding: 1.125rem 1.5rem; }
+  #subscribe-submit button:hover,
+  .wp-block-button__link:hover,
+  .btn:hover {
+    background-color: #8c46a3; }
 
 /**
  * 	 __        ______ ____  _   _ _____ 
@@ -755,15 +761,23 @@ p {
   padding-bottom: 3rem; }
   .widget-area[role="complementary"] .widget {
     display: inline-block;
-    padding-right: 1.5rem;
     vertical-align: top;
     margin-right: -4px; }
     @media screen and (min-width: 768px) {
       .widget-area[role="complementary"] .widget {
+        padding-right: 3rem;
         width: 50%; } }
     @media screen and (min-width: 768px) {
       .widget-area[role="complementary"] .widget {
-        width: 33.333%; } }
+        width: 25%; } }
+  @media screen and (min-width: 768px) {
+    .widget-area[role="complementary"] .widget_blog_subscription {
+      width: 40%; } }
+  .widget-area[role="complementary"] .widget_blog_subscription .post-date {
+    display: block; }
+  @media screen and (min-width: 768px) {
+    .widget-area[role="complementary"] .widget_recent_entries {
+      width: 35%; } }
 
 .site-info {
   text-align: center; }
@@ -779,10 +793,20 @@ p {
 #subscribe-submit {
   margin-bottom: 0; }
 
+#subscribe-email input {
+  width: 100%;
+  height: 3.625rem;
+  padding-right: 10em;
+  border-radius: 2rem;
+  padding-left: 2rem; }
+
 #subscribe-submit {
   position: absolute;
   bottom: 0;
-  right: 0; }
+  right: 1.5rem; }
+  #subscribe-submit button {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0; }
 
 .entry-header,
 .home-hero {
