--- a/css/main.css
+++ b/css/main.css
@@ -754,7 +754,11 @@ p {
   color: #f8f8f8; }
   .widget-area[role="complementary"] a,
   .site-footer a {
-    color: inherit; }
+    color: inherit;
+    text-decoration: none; }
+    .widget-area[role="complementary"] a:hover,
+    .site-footer a:hover {
+      text-decoration: underline; }
 
 .widget-area[role="complementary"] {
   padding-top: 3rem;
@@ -773,11 +777,19 @@ p {
   @media screen and (min-width: 768px) {
     .widget-area[role="complementary"] .widget_blog_subscription {
       width: 40%; } }
-  .widget-area[role="complementary"] .widget_blog_subscription .post-date {
-    display: block; }
   @media screen and (min-width: 768px) {
     .widget-area[role="complementary"] .widget_recent_entries {
       width: 35%; } }
+  .widget-area[role="complementary"] .widget_recent_entries li {
+    margin-bottom: 1rem; }
+  .widget-area[role="complementary"] .widget_recent_entries a {
+    font-weight: false;
+    color: #b898cd; }
+  .widget-area[role="complementary"] .post-date {
+    display: block;
+    opacity: .5;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
 
 .site-info {
   text-align: center; }
@@ -785,6 +797,18 @@ p {
 .site-footer {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem; }
+
+.site-info {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  text-transform: uppercase;
+  padding-top: 1.5rem;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.85); }
+
+.site-info-generator:after {
+  content: "|";
+  margin-right: 1rem;
+  margin-left: 1rem; }
 
 .widget_blog_subscription {
   position: relative; }
@@ -803,7 +827,10 @@ p {
 #subscribe-submit {
   position: absolute;
   bottom: 0;
-  right: 1.5rem; }
+  right: 0; }
+  @media screen and (min-width: 768px) {
+    #subscribe-submit {
+      right: 3rem; } }
   #subscribe-submit button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
